# app

./: .gitignore  CLAUDE.md  README.md  SEELEN-UI-AUDIT.md  commitlint.config.js  package-lock.json  package.json
.github/workflows/: release-desktop.yml
.security-hardening/: 02-threat-model.md
crates/wry/: Cargo.toml
crates/wry/src/: lib.rs
crates/wry/src/webview2/: mod.rs
hook-dll/: Cargo.toml
hook-dll/.cargo/: config.toml
hook-dll/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  opener.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_core.rs  discord.rs  error.rs  events.rs  lib.rs  media.rs  system_monitor.rs  tray.rs  window_layer.rs
