[package]
name = "mouseleave-hook"
version = "0.1.0"
edition = "2021"

[lib]
name = "mouseleave_hook"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
